renamed weed category to life form subcategory
